# SimpleOcr

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  best.xml  build.sh  install.sh  ocr  test.py  test.xml  try.py
CMakeModules/: FindOpenCv.cmake
app/: main.cpp
data/: car_list  dataset.json  dataset2.json  example.json  gen_dataset.py  gen_dataset.sh  generate.py  rename.py  simple_test.json
data/step2/: dataset.json  simple_test.json
src/: Brain.cpp  Brain.hpp  CMakeLists.txt  Dataset.cpp  Dataset.hpp  IClassifier.hpp  IFeatureExtractor.hpp  IPlugin.hpp  IPreprocessor.hpp  ISegmenter.hpp  Image.cpp  Image.hpp  ModuleManager.hpp  PaternFinder.hpp  Pos.hpp  Preprocessor.hpp  PreprocessorManager.cpp  PreprocessorManager.hpp  Word.hpp  main.cpp
src/classifiers/: CMakeLists.txt  NeuralNetworkClassifier.cpp  NeuralNetworkClassifier.hpp  TestClassifier.cpp  TestClassifier.hpp  neuralnetworkclassifier.cpp  neuralnetworkclassifier.hpp
src/feature_extractors/: CMakeLists.txt  MomentExtractor.cpp  MomentExtractor.hpp  ScaleDown.cpp  ScaleDown.hpp  TestExtractor.cpp  TestExtractor.hpp
src/preprocessors/: CMakeLists.txt  GrayImg.cpp  GrayImg.hpp  HueThreshold.cpp  HueThreshold.hpp  MorphologicFilter.cpp  MorphologicFilter.hpp  Smooth.cpp  Smooth.hpp
src/segmenters/: CMakeLists.txt  ContoursSegmenter.cpp  ContoursSegmenter.hpp  HistogramSegmenter.cpp  HistogramSegmenter.hpp  OtherHistogramSegmenter.cpp
src/utils/: NonCopyable.hpp  json.hpp  lib_loader.hpp
src/utils/json/: Json.hpp  any.hpp  json.cpp  json.hpp
tests/: CMakeLists.txt
tests/json/: CMakeLists.txt  data.json  main.cpp
tests/lib_loader/: CMakeLists.txt  animal.hpp  koala.cpp  lib.cpp  panda.cpp
